--- a/javascript/tools/get_position.html
+++ b/javascript/tools/get_position.html
@@ -14,7 +14,7 @@
     confirm('your longitude is: ' + pos.coords.longitude);
   }
   function error(){
-    console.log('Not localiosed');
+    console.log('Not localised');
   }
   </script>
 </body>
